fix overflow popups

--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,7 @@ h1 {
   background-color: transparent;
   width: 100%;
   height: 100%;
+  position: relative;
 }
 .header {
   position: absolute;
@@ -102,9 +103,10 @@ h1 {
   left: 0;
   width: auto;
   height: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
   backdrop-filter: blur(10px);
   padding: 20px;
+  box-sizing: border-box;
 }
 
 #closeBtnCredits, #closeBtnInfos{
